pkg/servicemesh/federation/example/config-poc/import/http/passthrough/destinationrule.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  # imports-<service-name>-<mesh>
  name: imports-ratings-mesh1
  namespace: mesh2-system
spec:
  # matches exported service name (fqdn)
  host: ratings.bookinfo.svc.mesh2.local
  # host: ratings-aliased.mesh1-exports.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 9080
        tls:
          mode: ISTIO_MUTUAL
  exportTo:
    - '*'
